# Stellax

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEX_UI_UX_RESEARCH.md  Makefile  README.md  clippy.toml  environments.toml  package.json  pnpm-lock.yaml
contracts/stellax-funding/: Cargo.toml
contracts/stellax-funding/src/: lib.rs
contracts/stellax-funding/test_snapshots/tests/: estimate_funding_payment_uses_position_snapshot.1.json  funding_rate_is_clamped_to_protocol_max.1.json  rate_is_negative_when_mark_below_index.1.json  rate_is_positive_when_mark_above_index.1.json  settle_funding_returns_negative_payment_for_longs_when_mark_above_index.1.json  update_accumulates_linearly_over_time.1.json  velocity_decelerates_and_reverses_on_sign_flip.1.json  velocity_ramps_rate_over_successive_ticks.1.json  zero_rate_when_mark_equals_index.1.json
contracts/stellax-governor/: Cargo.toml
contracts/stellax-governor/src/: lib.rs
contracts/stellax-governor/test_snapshots/tests/: phase_o_configure_requires_multisig.1.json  phase_o_create_proposal_snapshots_total_and_epoch.1.json  phase_o_double_vote_rejected.1.json  phase_o_flash_stake_voter_rejected.1.json  phase_o_happy_path_pass_and_execute.1.json  phase_o_majority_against_marks_failed.1.json  phase_o_proposer_without_stake_rejected.1.json  phase_o_quorum_not_met_marks_failed.1.json  phase_o_tally_before_voting_window_ends_rejected.1.json  test_approve_accumulates.1.json  test_approve_duplicate_fails.1.json  test_approve_non_member_fails.1.json  test_double_initialize_fails.1.json  test_emergency_pause.1.json  test_emergency_pause_wrong_guardian_fails.1.json  test_execute_already_executed_fails.1.json  test_execute_threshold_not_met.1.json  test_execute_timelock_enforced.1.json  test_execute_transfer_admin.1.json  test_execute_unpause_protocol.1.json  test_initialize.1.json  test_propose_non_member_fails.1.json  test_propose_returns_incrementing_ids.1.json
contracts/stellax-math/: Cargo.toml
contracts/stellax-math/src/: advanced.rs  bps.rs  constants.rs  fixed.rs  lib.rs  types.rs
contracts/stellax-options/: Cargo.toml
contracts/stellax-options/src/: lib.rs
contracts/stellax-oracle/: Cargo.toml
contracts/stellax-oracle/src/: lib.rs
contracts/stellax-oracle/test_snapshots/tests/: admin_push_price_writes_and_enforces_monotonic_timestamp.1.json  get_price_rejects_stale_without_fallback.1.json  get_prices_batches_multiple_assets.1.json  pause_and_unpause_gate_reads.1.json  per_symbol_staleness_overrides_global.1.json  rejects_non_increasing_package_timestamps.1.json  set_symbol_staleness_rejects_zero.1.json  stale_redstone_price_uses_reflector_fallback.1.json  submit_pyth_update_rejects_stale_publish_time.1.json  submit_pyth_update_rejects_unmapped_asset.1.json  submit_pyth_update_requires_config.1.json  submit_pyth_update_skips_non_monotonic_timestamps.1.json  submit_pyth_update_writes_normalized_price.1.json  verify_price_payload_does_not_write_storage.1.json  write_prices_and_get_price.1.json  write_prices_rejects_payload_below_threshold.1.json
contracts/stellax-perp-engine/: Cargo.toml
contracts/stellax-perp-engine/src/: lib.rs
contracts/stellax-perp-engine/test_snapshots/tests/: get_market_info_exposes_runtime_state.1.json  large_long_moves_mark_price_up.1.json  open_and_close_long_updates_balances_and_unlocks_margin.1.json  partial_close_reduces_position_size_and_locked_margin.1.json  phase_r_bracket_link_requires_existing_orders_owned_by_user.1.json  phase_r_create_iceberg_plan_and_release_slice.1.json  phase_r_create_twap_plan_allocates_id.1.json  phase_r_iceberg_plan_completes_when_total_filled.1.json  phase_r_release_twap_slice_respects_cadence.1.json  phase_r_update_trailing_anchor_only_ratchets_favorably.1.json  rejects_leverage_above_market_max.1.json  rejects_when_open_interest_cap_is_exceeded.1.json  test_maker_rebate_for_thin_side.1.json  test_skew_fee_increases_with_imbalance.1.json  version_returns_two.1.json
contracts/stellax-risk/: Cargo.toml
contracts/stellax-risk/src/: lib.rs
contracts/stellax-risk/test_snapshots/tests/: adl_triggers_when_remaining_position_stays_underwater.1.json  get_account_health_includes_existing_positions.1.json  insurance_funder_remove_blocks_subsequent_top_ups.1.json  insurance_payout_decrements_balance_and_moves_tokens.1.json  insurance_payout_rejects_overdraft.1.json  insurance_top_up_credits_balance_for_whitelisted_source.1.json  insurance_top_up_rejects_amount_exceeding_cap.1.json  (+9 more)
contracts/stellax-rwa-issuer/: Cargo.toml
contracts/stellax-rwa-issuer/src/: lib.rs  test.rs
contracts/stellax-slp-vault/: Cargo.toml
contracts/stellax-slp-vault/src/: lib.rs
contracts/stellax-vault/: Cargo.toml
contracts/stellax-vault/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/test_snapshots/: cannot_claim_before_epoch_closes.1.json  crossing_orders_settle_and_produce_positions.1.json  first_trade_executes_at_oracle_price_within_tolerance.1.json  fresh_market_has_zero_velocity_and_rate.1.json  full_trade_lifecycle_updates_balances_and_locks_margin.1.json  hedged_perp_put_requires_less_margin_than_unhedged.1.json  late_stakers_do_not_claim_prior_epochs.1.json  maker_short_against_positive_skew_gets_rebate_below_oracle.1.json  non_crossing_prices_cannot_settle.1.json  non_keeper_cannot_settle.1.json  non_owner_cannot_cancel_order.1.json  partial_fill_leaves_remainder_open.1.json  portfolio_greeks_reports_option_position.1.json  skew_fee_increases_execution_price_for_subsequent_longs.1.json  stake_entry_tracks_balance_and_epoch.1.json  svi_interpolates_between_two_expiries.1.json  svi_surface_drives_option_premium.1.json  svi_surface_produces_smile_at_wings.1.json  trader_can_cancel_own_open_order.1.json  two_stakers_split_rewards_pro_rata.1.json  unhealthy_position_is_liquidated_and_fees_are_paid.1.json  update_funding_is_safe_after_open_position.1.json  zero_premium_keeps_velocity_quiescent.1.json
tests/tests/: liquidation.rs  oracle_price_execution.rs  test_clob_lifecycle.rs  test_staking_rewards.rs  test_velocity_funding.rs  trade_lifecycle.rs
(+161 files in other folders)
